k8s/go-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service
  namespace: urlshortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
      - name: go-service
        image: urlshortner-microservices_go-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 8000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
