k8s/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-service
  namespace: urlshortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-service
  template:
    metadata:
      labels:
        app: python-service
    spec:
      containers:
      - name: python-service
        image: urlshortner-microservices_python-service:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
