k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener-ingress
  namespace: urlshortener

spec:
  ingressClassName: traefik

  rules:
  - host: urlshortener.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: python-service

            port:
              number: 5000
